coala/parse/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> <empty>
Rule 2     program -> program rule DOT
Rule 3     program -> program ESCAPE_ASP
Rule 4     program -> program ROLE_BEGIN role ROLE_END
Rule 5     role -> <empty>
Rule 6     role -> role rule DOT
Rule 7     role -> role ESCAPE_ASP
Rule 8     rule -> fact
Rule 9     rule -> law
Rule 10    rule -> query
Rule 11    fact -> pred_fact
Rule 12    fact -> act_fact
Rule 13    fact -> flu_fact
Rule 14    law -> static_law
Rule 15    law -> dynamic_law
Rule 16    law -> inertial_law
Rule 17    law -> default_law
Rule 18    law -> imposs_law
Rule 19    law -> nonexe_law
Rule 20    law -> visible_law
Rule 21    visible_law -> VISIBLE fluent_formula if_part where_part
Rule 22    query -> init_rule
Rule 23    query -> goal_query
Rule 24    pred_fact -> formula where_part
Rule 25    act_fact -> ACT fluent_formula where_part
Rule 26    flu_fact -> FLU fluent_formula where_part
Rule 27    flu_fact -> DFLU fluent_formula where_part
Rule 28    flu_fact -> FLU fluent_formula int_domain where_part
Rule 29    flu_fact -> DFLU fluent_formula int_domain where_part
Rule 30    flu_fact -> FLU fluent EQ LBRAC term COMMA term_list RBRAC where_part
Rule 31    flu_fact -> DFLU fluent EQ LBRAC term COMMA term_list RBRAC where_part
Rule 32    flu_fact -> INT fluent_formula where_part
Rule 33    static_law -> formula IF formula ifcons_part where_part
Rule 34    static_law -> formula IFCONS formula where_part
Rule 35    dynamic_law -> formula after_part ifcons_part where_part
Rule 36    dynamic_law -> formula CAUSES formula where_part
Rule 37    dynamic_law -> formula CAUSES formula IF formula where_part
Rule 38    inertial_law -> INERTIAL fluent_formula where_part
Rule 39    default_law -> DEFAULT formula where_part
Rule 40    default_law -> DEFAULT formula IF formula where_part
Rule 41    default_law -> DEFAULT formula AFTER formula where_part
Rule 42    imposs_law -> IMPOSSIBLE formula ifcons_part where_part
Rule 43    nonexe_law -> NONEXE formula if_part ifcons_part where_part
Rule 44    init_rule -> INIT formula where_part
Rule 45    goal_query -> GOAL formula where_part
Rule 46    if_part -> <empty>
Rule 47    if_part -> IF formula
Rule 48    after_part -> AFTER formula
Rule 49    ifcons_part -> <empty>
Rule 50    ifcons_part -> IFCONS formula
Rule 51    where_part -> <empty>
Rule 52    where_part -> WHERE bindings
Rule 53    bindings -> binding
Rule 54    bindings -> bindings COMMA binding
Rule 55    binding -> ACT fluent
Rule 56    binding -> FLU fluent equalpart
Rule 57    binding -> NOT asp_term
Rule 58    binding -> asp_term
Rule 59    formula -> tfa
Rule 60    formula -> formula COMMA tfa
Rule 61    tfa -> asp_term
Rule 62    tfa -> NOT fluent equalpart
Rule 63    tfa -> TRUE
Rule 64    tfa -> FALSE
Rule 65    fluent_formula -> fluent equalpart
Rule 66    fluent_formula -> fluent_formula COMMA fluent equalpart
Rule 67    equalpart -> <empty>
Rule 68    equalpart -> EQ term
Rule 69    fluent -> identifier
Rule 70    fluent -> var_term
Rule 71    fluent -> IDENTIFIER LBRAC term_list RBRAC
Rule 72    term_list -> term
Rule 73    term_list -> term COMMA term_list
Rule 74    term_or_negated_ident -> MINUS identifier
Rule 75    term_or_negated_ident -> term
Rule 76    term -> var_term
Rule 77    term -> identifier
Rule 78    term -> NUMBER
Rule 79    term -> IDENTIFIER LBRAC term_list RBRAC
Rule 80    var_term -> VARIABLE
Rule 81    identifier -> IDENTIFIER
Rule 82    int_domain -> COLON term DDOT term
Rule 83    int_domain -> COLON INT
Rule 84    asp_term -> term
Rule 85    asp_term -> MINUS term
Rule 86    asp_term -> term ASSIGN asp_operation
Rule 87    asp_term -> asp_operation asp_eqoperator asp_operation
Rule 88    asp_eqoperator -> EQQ
Rule 89    asp_eqoperator -> EQ
Rule 90    asp_eqoperator -> NEQ
Rule 91    asp_eqoperator -> LT
Rule 92    asp_eqoperator -> GT
Rule 93    asp_eqoperator -> LE
Rule 94    asp_eqoperator -> GE
Rule 95    asp_operation -> asp_mult_operation
Rule 96    asp_operation -> asp_operation PLUS asp_mult_operation
Rule 97    asp_operation -> asp_operation MINUS asp_mult_operation
Rule 98    asp_mult_operation -> asp_pow_operation
Rule 99    asp_mult_operation -> asp_mult_operation TIMES asp_pow_operation
Rule 100   asp_mult_operation -> asp_mult_operation DIV asp_pow_operation
Rule 101   asp_pow_operation -> asp_brac_operation
Rule 102   asp_pow_operation -> asp_pow_operation POWER asp_brac_operation
Rule 103   asp_brac_operation -> term_or_negated_ident
Rule 104   asp_brac_operation -> LBRAC asp_operation RBRAC

Terminals, with rules where they appear

ACT                  : 25 55
AFTER                : 41 48
ASSIGN               : 86
CAUSES               : 36 37
COLON                : 82 83
COMMA                : 30 31 54 60 66 73
DDOT                 : 82
DEFAULT              : 39 40 41
DFLU                 : 27 29 31
DIV                  : 100
DOT                  : 2 6
EQ                   : 30 31 68 89
EQQ                  : 88
ESCAPE_ASP           : 3 7
FALSE                : 64
FLU                  : 26 28 30 56
GE                   : 94
GOAL                 : 45
GT                   : 92
IDENTIFIER           : 71 79 81
IF                   : 33 37 40 47
IFCONS               : 34 50
IMPOSSIBLE           : 42
INERTIAL             : 38
INIT                 : 44
INT                  : 32 83
LBRAC                : 30 31 71 79 104
LE                   : 93
LT                   : 91
MINUS                : 74 85 97
NEQ                  : 90
NONEXE               : 43
NOT                  : 57 62
NUMBER               : 78
PLUS                 : 96
POWER                : 102
RBRAC                : 30 31 71 79 104
ROLE_BEGIN           : 4
ROLE_END             : 4
TIMES                : 99
TRUE                 : 63
VARIABLE             : 80
VISIBLE              : 21
WHERE                : 52
error                : 

Nonterminals, with rules where they appear

act_fact             : 12
after_part           : 35
asp_brac_operation   : 101 102
asp_eqoperator       : 87
asp_mult_operation   : 95 96 97 99 100
asp_operation        : 86 87 87 96 97 104
asp_pow_operation    : 98 99 100 102
asp_term             : 57 58 61
binding              : 53 54
bindings             : 52 54
default_law          : 17
dynamic_law          : 15
equalpart            : 56 62 65 66
fact                 : 8
flu_fact             : 13
fluent               : 30 31 55 56 62 65 66
fluent_formula       : 21 25 26 27 28 29 32 38 66
formula              : 24 33 33 34 34 35 36 36 37 37 37 39 40 40 41 41 42 43 44 45 47 48 50 60
goal_query           : 23
identifier           : 69 74 77
if_part              : 21 43
ifcons_part          : 33 35 42 43
imposs_law           : 18
inertial_law         : 16
init_rule            : 22
int_domain           : 28 29
law                  : 9
nonexe_law           : 19
pred_fact            : 11
program              : 2 3 4 0
query                : 10
role                 : 4 6 7
rule                 : 2 6
static_law           : 14
term                 : 30 31 68 72 73 75 82 82 84 85 86
term_list            : 30 31 71 73 79
term_or_negated_ident : 103
tfa                  : 59 60
var_term             : 70 76
visible_law          : 20
where_part           : 21 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> .
    (2) program -> . program rule DOT
    (3) program -> . program ESCAPE_ASP
    (4) program -> . program ROLE_BEGIN role ROLE_END

    ESCAPE_ASP      reduce using rule 1 (program -> .)
    ROLE_BEGIN      reduce using rule 1 (program -> .)
    ACT             reduce using rule 1 (program -> .)
    FLU             reduce using rule 1 (program -> .)
    DFLU            reduce using rule 1 (program -> .)
    INT             reduce using rule 1 (program -> .)
    INERTIAL        reduce using rule 1 (program -> .)
    DEFAULT         reduce using rule 1 (program -> .)
    IMPOSSIBLE      reduce using rule 1 (program -> .)
    NONEXE          reduce using rule 1 (program -> .)
    VISIBLE         reduce using rule 1 (program -> .)
    INIT            reduce using rule 1 (program -> .)
    GOAL            reduce using rule 1 (program -> .)
    NOT             reduce using rule 1 (program -> .)
    TRUE            reduce using rule 1 (program -> .)
    FALSE           reduce using rule 1 (program -> .)
    MINUS           reduce using rule 1 (program -> .)
    NUMBER          reduce using rule 1 (program -> .)
    IDENTIFIER      reduce using rule 1 (program -> .)
    VARIABLE        reduce using rule 1 (program -> .)
    LBRAC           reduce using rule 1 (program -> .)
    $end            reduce using rule 1 (program -> .)

    program                        shift and go to state 1

state 1

    (0) S' -> program .
    (2) program -> program . rule DOT
    (3) program -> program . ESCAPE_ASP
    (4) program -> program . ROLE_BEGIN role ROLE_END
    (8) rule -> . fact
    (9) rule -> . law
    (10) rule -> . query
    (11) fact -> . pred_fact
    (12) fact -> . act_fact
    (13) fact -> . flu_fact
    (14) law -> . static_law
    (15) law -> . dynamic_law
    (16) law -> . inertial_law
    (17) law -> . default_law
    (18) law -> . imposs_law
    (19) law -> . nonexe_law
    (20) law -> . visible_law
    (22) query -> . init_rule
    (23) query -> . goal_query
    (24) pred_fact -> . formula where_part
    (25) act_fact -> . ACT fluent_formula where_part
    (26) flu_fact -> . FLU fluent_formula where_part
    (27) flu_fact -> . DFLU fluent_formula where_part
    (28) flu_fact -> . FLU fluent_formula int_domain where_part
    (29) flu_fact -> . DFLU fluent_formula int_domain where_part
    (30) flu_fact -> . FLU fluent EQ LBRAC term COMMA term_list RBRAC where_part
    (31) flu_fact -> . DFLU fluent EQ LBRAC term COMMA term_list RBRAC where_part
    (32) flu_fact -> . INT fluent_formula where_part
    (33) static_law -> . formula IF formula ifcons_part where_part
    (34) static_law -> . formula IFCONS formula where_part
    (35) dynamic_law -> . formula after_part ifcons_part where_part
    (36) dynamic_law -> . formula CAUSES formula where_part
    (37) dynamic_law -> . formula CAUSES formula IF formula where_part
    (38) inertial_law -> . INERTIAL fluent_formula where_part
    (39) default_law -> . DEFAULT formula where_part
    (40) default_law -> . DEFAULT formula IF formula where_part
    (41) default_law -> . DEFAULT formula AFTER formula where_part
    (42) imposs_law -> . IMPOSSIBLE formula ifcons_part where_part
    (43) nonexe_law -> . NONEXE formula if_part ifcons_part where_part
    (21) visible_law -> . VISIBLE fluent_formula if_part where_part
    (44) init_rule -> . INIT formula where_part
    (45) goal_query -> . GOAL formula where_part
    (59) formula -> . tfa
    (60) formula -> . formula COMMA tfa
    (61) tfa -> . asp_term
    (62) tfa -> . NOT fluent equalpart
    (63) tfa -> . TRUE
    (64) tfa -> . FALSE
    (84) asp_term -> . term
    (85) asp_term -> . MINUS term
    (86) asp_term -> . term ASSIGN asp_operation
    (87) asp_term -> . asp_operation asp_eqoperator asp_operation
    (76) term -> . var_term
    (77) term -> . identifier
    (78) term -> . NUMBER
    (79) term -> . IDENTIFIER LBRAC term_list RBRAC
    (95) asp_operation -> . asp_mult_operation
    (96) asp_operation -> . asp_operation PLUS asp_mult_operation
    (97) asp_operation -> . asp_operation MINUS asp_mult_operation
    (80) var_term -> . VARIABLE
    (81) identifier -> . IDENTIFIER
    (98) asp_mult_operation -> . asp_pow_operation
    (99) asp_mult_operation -> . asp_mult_operation TIMES asp_pow_operation
    (100) asp_mult_operation -> . asp_mult_operation DIV asp_pow_operation
    (101) asp_pow_operation -> . asp_brac_operation
    (102) asp_pow_operation -> . asp_pow_operation POWER asp_brac_operation
    (103) asp_brac_operation -> . term_or_negated_ident
    (104) asp_brac_operation -> . LBRAC asp_operation RBRAC
    (74) term_or_negated_ident -> . MINUS identifier
    (75) term_or_negated_ident -> . term

    ESCAPE_ASP      shift and go to state 8
    ROLE_BEGIN      shift and go to state 46
    ACT             shift and go to state 12
    FLU             shift and go to state 38
    DFLU            shift and go to state 44
    INT             shift and go to state 42
    INERTIAL        shift and go to state 47
    DEFAULT         shift and go to state 4
    IMPOSSIBLE      shift and go to state 34
    NONEXE          shift and go to state 24
    VISIBLE         shift and go to state 32
    INIT            shift and go to state 21
    GOAL            shift and go to state 2
    NOT             shift and go to state 37
    TRUE            shift and go to state 36
    FALSE           shift and go to state 40
    MINUS           shift and go to state 19
    NUMBER          shift and go to state 7
    IDENTIFIER      shift and go to state 23
    VARIABLE        shift and go to state 9
    LBRAC           shift and go to state 41

    asp_brac_operation             shift and go to state 18
    imposs_law                     shift and go to state 3
    act_fact                       shift and go to state 5
    flu_fact                       shift and go to state 6
    dynamic_law                    shift and go to state 49
    asp_pow_operation              shift and go to state 25
    query                          shift and go to state 13
    asp_term                       shift and go to state 14
    law                            shift and go to state 16
    inertial_law                   shift and go to state 17
    term_or_negated_ident          shift and go to state 10
    default_law                    shift and go to state 20
    formula                        shift and go to state 22
    nonexe_law                     shift and go to state 26
    visible_law                    shift and go to state 27
    goal_query                     shift and go to state 28
    tfa                            shift and go to state 29
    static_law                     shift and go to state 31
    asp_mult_operation             shift and go to state 33
    pred_fact                      shift and go to state 35
    term                           shift and go to state 30
    var_term                       shift and go to state 45
    init_rule                      shift and go to state 43
    asp_operation                  shift and go to state 15
    rule                           shift and go to state 11
    identifier                     shift and go to state 39
    fact                           shift and go to state 48

state 2

    (45) goal_query -> GOAL . formula where_part
    (59) formula -> . tfa
    (60) formula -> . formula COMMA tfa
    (61) tfa -> . asp_term
    (62) tfa -> . NOT fluent equalpart
    (63) tfa -> . TRUE
    (64) tfa -> . FALSE
    (84) asp_term -> . term
    (85) asp_term -> . MINUS term
    (86) asp_term -> . term ASSIGN asp_operation
    (87) asp_term -> . asp_operation asp_eqoperator asp_operation
    (76) term -> . var_term
    (77) term -> . identifier
    (78) term -> . NUMBER
    (79) term -> . IDENTIFIER LBRAC term_list RBRAC
    (95) asp_operation -> . asp_mult_operation
    (96) asp_operation -> . asp_operation PLUS asp_mult_operation
    (97) asp_operation -> . asp_operation MINUS asp_mult_operation
    (80) var_term -> . VARIABLE
    (81) identifier -> . IDENTIFIER
    (98) asp_mult_operation -> . asp_pow_operation
    (99) asp_mult_operation -> . asp_mult_operation TIMES asp_pow_operation
    (100) asp_mult_operation -> . asp_mult_operation DIV asp_pow_operation
    (101) asp_pow_operation -> . asp_brac_operation
    (102) asp_pow_operation -> . asp_pow_operation POWER asp_brac_operation
    (103) asp_brac_operation -> . term_or_negated_ident
    (104) asp_brac_operation -> . LBRAC asp_operation RBRAC
    (74) term_or_negated_ident -> . MINUS identifier
    (75) term_or_negated_ident -> . term

    NOT             shift and go to state 37
    TRUE            shift and go to state 36
    FALSE           shift and go to state 40
    MINUS           shift and go to state 19
    NUMBER          shift and go to state 7
    IDENTIFIER      shift and go to state 23
    VARIABLE        shift and go to state 9
    LBRAC           shift and go to state 41

    term                           shift and go to state 30
    asp_brac_operation             shift and go to state 18
    asp_operation                  shift and go to state 15
    var_term                       shift and go to state 45
    term_or_negated_ident          shift and go to state 10
    tfa                            shift and go to state 29
    asp_mult_operation             shift and go to state 33
    asp_pow_operation              shift and go to state 25
    formula                        shift and go to state 50
    identifier                     shift and go to state 39
    asp_term                       shift and go to state 14

state 3

    (18) law -> imposs_law .

    DOT             reduce using rule 18 (law -> imposs_law .)


state 4

    (39) default_law -> DEFAULT . formula where_part
    (40) default_law -> DEFAULT . formula IF formula where_part
    (41) default_law -> DEFAULT . formula AFTER formula where_part
    (59) formula -> . tfa
    (60) formula -> . formula COMMA tfa
    (61) tfa -> . asp_term
    (62) tfa -> . NOT fluent equalpart
    (63) tfa -> . TRUE
    (64) tfa -> . FALSE
    (84) asp_term -> . term
    (85) asp_term -> . MINUS term
    (86) asp_term -> . term ASSIGN asp_operation
    (87) asp_term -> . asp_operation asp_eqoperator asp_operation
    (76) term -> . var_term
    (77) term -> . identifier
    (78) term -> . NUMBER
    (79) term -> . IDENTIFIER LBRAC term_list RBRAC
    (95) asp_operation -> . asp_mult_operation
    (96) asp_operation -> . asp_operation PLUS asp_mult_operation
    (97) asp_operation -> . asp_operation MINUS asp_mult_operation
    (80) var_term -> . VARIABLE
    (81) identifier -> . IDENTIFIER
    (98) asp_mult_operation -> . asp_pow_operation
    (99) asp_mult_operation -> . asp_mult_operation TIMES asp_pow_operation
    (100) asp_mult_operation -> . asp_mult_operation DIV asp_pow_operation
    (101) asp_pow_operation -> . asp_brac_operation
    (102) asp_pow_operation -> . asp_pow_operation POWER asp_brac_operation
    (103) asp_brac_operation -> . term_or_negated_ident
    (104) asp_brac_operation -> . LBRAC asp_operation RBRAC
    (74) term_or_negated_ident -> . MINUS identifier
    (75) term_or_negated_ident -> . term

    NOT             shift and go to state 37
    TRUE            shift and go to state 36
    FALSE           shift and go to state 40
    MINUS           shift and go to state 19
    NUMBER          shift and go to state 7
    IDENTIFIER      shift and go to state 23
    VARIABLE        shift and go to state 9
    LBRAC           shift and go to state 41

    term                           shift and go to state 30
    asp_brac_operation             shift and go to state 18
    asp_operation                  shift and go to state 15
    var_term                       shift and go to state 45
    term_or_negated_ident          shift and go to state 10
    tfa                            shift and go to state 29
    asp_mult_operation             shift and go to state 33
    asp_pow_operation              shift and go to state 25
    formula                        shift and go to state 51
    identifier                     shift and go to state 39
    asp_term                       shift and go to state 14

state 5

    (12) fact -> act_fact .

    DOT             reduce using rule 12 (fact -> act_fact .)


state 6

    (13) fact -> flu_fact .

    DOT             reduce using rule 13 (fact -> flu_fact .)


state 7

    (78) term -> NUMBER .

    ASSIGN          reduce using rule 78 (term -> NUMBER .)
    COMMA           reduce using rule 78 (term -> NUMBER .)
    IFCONS          reduce using rule 78 (term -> NUMBER .)
    WHERE           reduce using rule 78 (term -> NUMBER .)
    DOT             reduce using rule 78 (term -> NUMBER .)
    POWER           reduce using rule 78 (term -> NUMBER .)
    TIMES           reduce using rule 78 (term -> NUMBER .)
    DIV             reduce using rule 78 (term -> NUMBER .)
    PLUS            reduce using rule 78 (term -> NUMBER .)
    MINUS           reduce using rule 78 (term -> NUMBER .)
    EQQ             reduce using rule 78 (term -> NUMBER .)
    EQ              reduce using rule 78 (term -> NUMBER .)
    NEQ             reduce using rule 78 (term -> NUMBER .)
    LT              reduce using rule 78 (term -> NUMBER .)
    GT              reduce using rule 78 (term -> NUMBER .)
    LE              reduce using rule 78 (term -> NUMBER .)
    GE              reduce using rule 78 (term -> NUMBER .)
    RBRAC           reduce using rule 78 (term -> NUMBER .)
    IF              reduce using rule 78 (term -> NUMBER .)
    CAUSES          reduce using rule 78 (term -> NUMBER .)
    AFTER           reduce using rule 78 (term -> NUMBER .)
    COLON           reduce using rule 78 (term -> NUMBER .)
    DDOT            reduce using rule 78 (term -> NUMBER .)


state 8

    (3) program -> program ESCAPE_ASP .

    ESCAPE_ASP      reduce using rule 3 (program -> program ESCAPE_ASP .)
    ROLE_BEGIN      reduce using rule 3 (program -> program ESCAPE_ASP .)
    ACT             reduce using rule 3 (program -> program ESCAPE_ASP .)
    FLU             reduce using rule 3 (program -> program ESCAPE_ASP .)
    DFLU            reduce using rule 3 (program -> program ESCAPE_ASP .)
    INT             reduce using rule 3 (program -> program ESCAPE_ASP .)
    INERTIAL        reduce using rule 3 (program -> program ESCAPE_ASP .)
    DEFAULT         reduce using rule 3 (program -> program ESCAPE_ASP .)
    IMPOSSIBLE      reduce using rule 3 (program -> program ESCAPE_ASP .)
    NONEXE          reduce using rule 3 (program -> program ESCAPE_ASP .)
    VISIBLE         reduce using rule 3 (program -> program ESCAPE_ASP .)
    INIT            reduce using rule 3 (program -> program ESCAPE_ASP .)
    GOAL            reduce using rule 3 (program -> program ESCAPE_ASP .)
    NOT             reduce using rule 3 (program -> program ESCAPE_ASP .)
    TRUE            reduce using rule 3 (program -> program ESCAPE_ASP .)
    FALSE           reduce using rule 3 (program -> program ESCAPE_ASP .)
    MINUS           reduce using rule 3 (program -> program ESCAPE_ASP .)
    NUMBER          reduce using rule 3 (program -> program ESCAPE_ASP .)
    IDENTIFIER      reduce using rule 3 (program -> program ESCAPE_ASP .)
    VARIABLE        reduce using rule 3 (program -> program ESCAPE_ASP .)
    LBRAC           reduce using rule 3 (program -> program ESCAPE_ASP .)
    $end            reduce using rule 3 (program -> program ESCAPE_ASP .)


state 9

    (80) var_term -> VARIABLE .

    ASSIGN          reduce using rule 80 (var_term -> VARIABLE .)
    COMMA           reduce using rule 80 (var_term -> VARIABLE .)
    WHERE           reduce using rule 80 (var_term -> VARIABLE .)
    DOT             reduce using rule 80 (var_term -> VARIABLE .)
    POWER           reduce using rule 80 (var_term -> VARIABLE .)
    TIMES           reduce using rule 80 (var_term -> VARIABLE .)
    DIV             reduce using rule 80 (var_term -> VARIABLE .)
    PLUS            reduce using rule 80 (var_term -> VARIABLE .)
    MINUS           reduce using rule 80 (var_term -> VARIABLE .)
    EQQ             reduce using rule 80 (var_term -> VARIABLE .)
    EQ              reduce using rule 80 (var_term -> VARIABLE .)
    NEQ             reduce using rule 80 (var_term -> VARIABLE .)
    LT              reduce using rule 80 (var_term -> VARIABLE .)
    GT              reduce using rule 80 (var_term -> VARIABLE .)
    LE              reduce using rule 80 (var_term -> VARIABLE .)
    GE              reduce using rule 80 (var_term -> VARIABLE .)
    IFCONS          reduce using rule 80 (var_term -> VARIABLE .)
    RBRAC           reduce using rule 80 (var_term -> VARIABLE .)
    IF              reduce using rule 80 (var_term -> VARIABLE .)
    CAUSES          reduce using rule 80 (var_term -> VARIABLE .)
    AFTER           reduce using rule 80 (var_term -> VARIABLE .)
    COLON           reduce using rule 80 (var_term -> VARIABLE .)
    DDOT            reduce using rule 80 (var_term -> VARIABLE .)


state 10

    (103) asp_brac_operation -> term_or_negated_ident .

    POWER           reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    TIMES           reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    DIV             reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    PLUS            reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    MINUS           reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    EQQ             reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    EQ              reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    NEQ             reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    LT              reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    GT              reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    LE              reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    GE              reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    RBRAC           reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    IF              reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    IFCONS          reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    CAUSES          reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    COMMA           reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    WHERE           reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    AFTER           reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)
    DOT             reduce using rule 103 (asp_brac_operation -> term_or_negated_ident .)


state 11

    (2) program -> program rule . DOT

    DOT             shift and go to state 52


state 12

    (25) act_fact -> ACT . fluent_formula where_part
    (65) fluent_formula -> . fluent equalpart
    (66) fluent_formula -> . fluent_formula COMMA fluent equalpart
    (69) fluent -> . identifier
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (81) identifier -> . IDENTIFIER
    (80) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 53
    VARIABLE        shift and go to state 9

    var_term                       shift and go to state 54
    fluent                         shift and go to state 55
    fluent_formula                 shift and go to state 56
    identifier                     shift and go to state 57

state 13

    (10) rule -> query .

    DOT             reduce using rule 10 (rule -> query .)


state 14

    (61) tfa -> asp_term .

    COMMA           reduce using rule 61 (tfa -> asp_term .)
    WHERE           reduce using rule 61 (tfa -> asp_term .)
    DOT             reduce using rule 61 (tfa -> asp_term .)
    IFCONS          reduce using rule 61 (tfa -> asp_term .)
    IF              reduce using rule 61 (tfa -> asp_term .)
    CAUSES          reduce using rule 61 (tfa -> asp_term .)
    AFTER           reduce using rule 61 (tfa -> asp_term .)


state 15

    (87) asp_term -> asp_operation . asp_eqoperator asp_operation
    (96) asp_operation -> asp_operation . PLUS asp_mult_operation
    (97) asp_operation -> asp_operation . MINUS asp_mult_operation
    (88) asp_eqoperator -> . EQQ
    (89) asp_eqoperator -> . EQ
    (90) asp_eqoperator -> . NEQ
    (91) asp_eqoperator -> . LT
    (92) asp_eqoperator -> . GT
    (93) asp_eqoperator -> . LE
    (94) asp_eqoperator -> . GE

    PLUS            shift and go to state 63
    MINUS           shift and go to state 66
    EQQ             shift and go to state 59
    EQ              shift and go to state 65
    NEQ             shift and go to state 67
    LT              shift and go to state 61
    GT              shift and go to state 58
    LE              shift and go to state 62
    GE              shift and go to state 60

    asp_eqoperator                 shift and go to state 64

state 16

    (9) rule -> law .

    DOT             reduce using rule 9 (rule -> law .)


state 17

    (16) law -> inertial_law .

    DOT             reduce using rule 16 (law -> inertial_law .)


state 18

    (101) asp_pow_operation -> asp_brac_operation .

    POWER           reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    TIMES           reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    DIV             reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    PLUS            reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    MINUS           reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    EQQ             reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    EQ              reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    NEQ             reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    LT              reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    GT              reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    LE              reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    GE              reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    IF              reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    IFCONS          reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    CAUSES          reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    COMMA           reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    WHERE           reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    AFTER           reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    DOT             reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)
    RBRAC           reduce using rule 101 (asp_pow_operation -> asp_brac_operation .)


state 19

    (85) asp_term -> MINUS . term
    (74) term_or_negated_ident -> MINUS . identifier
    (76) term -> . var_term
    (77) term -> . identifier
    (78) term -> . NUMBER
    (79) term -> . IDENTIFIER LBRAC term_list RBRAC
    (81) identifier -> . IDENTIFIER
    (80) var_term -> . VARIABLE

    NUMBER          shift and go to state 7
    IDENTIFIER      shift and go to state 23
    VARIABLE        shift and go to state 9

    var_term                       shift and go to state 45
    term                           shift and go to state 68
    identifier                     shift and go to state 69

state 20

    (17) law -> default_law .

    DOT             reduce using rule 17 (law -> default_law .)


state 21

    (44) init_rule -> INIT . formula where_part
    (59) formula -> . tfa
    (60) formula -> . formula COMMA tfa
    (61) tfa -> . asp_term
    (62) tfa -> . NOT fluent equalpart
    (63) tfa -> . TRUE
    (64) tfa -> . FALSE
    (84) asp_term -> . term
    (85) asp_term -> . MINUS term
    (86) asp_term -> . term ASSIGN asp_operation
    (87) asp_term -> . asp_operation asp_eqoperator asp_operation
    (76) term -> . var_term
    (77) term -> . identifier
    (78) term -> . NUMBER
    (79) term -> . IDENTIFIER LBRAC term_list RBRAC
    (95) asp_operation -> . asp_mult_operation
    (96) asp_operation -> . asp_operation PLUS asp_mult_operation
    (97) asp_operation -> . asp_operation MINUS asp_mult_operation
    (80) var_term -> . VARIABLE
    (81) identifier -> . IDENTIFIER
    (98) asp_mult_operation -> . asp_pow_operation
    (99) asp_mult_operation -> . asp_mult_operation TIMES asp_pow_operation
    (100) asp_mult_operation -> . asp_mult_operation DIV asp_pow_operation
    (101) asp_pow_operation -> . asp_brac_operation
    (102) asp_pow_operation -> . asp_pow_operation POWER asp_brac_operation
    (103) asp_brac_operation -> . term_or_negated_ident
    (104) asp_brac_operation -> . LBRAC asp_operation RBRAC
    (74) term_or_negated_ident -> . MINUS identifier
    (75) term_or_negated_ident -> . term

    NOT             shift and go to state 37
    TRUE            shift and go to state 36
    FALSE           shift and go to state 40
    MINUS           shift and go to state 19
    NUMBER          shift and go to state 7
    IDENTIFIER      shift and go to state 23
    VARIABLE        shift and go to state 9
    LBRAC           shift and go to state 41

    term                           shift and go to state 30
    asp_brac_operation             shift and go to state 18
    asp_operation                  shift and go to state 15
    var_term                       shift and go to state 45
    term_or_negated_ident          shift and go to state 10
    tfa                            shift and go to state 29
    asp_mult_operation             shift and go to state 33
    asp_pow_operation              shift and go to state 25
    formula                        shift and go to state 70
    identifier                     shift and go to state 39
    asp_term                       shift and go to state 14

state 22

    (24) pred_fact -> formula . where_part
    (33) static_law -> formula . IF formula ifcons_part where_part
    (34) static_law -> formula . IFCONS formula where_part
    (35) dynamic_law -> formula . after_part ifcons_part where_part
    (36) dynamic_law -> formula . CAUSES formula where_part
    (37) dynamic_law -> formula . CAUSES formula IF formula where_part
    (60) formula -> formula . COMMA tfa
    (51) where_part -> .
    (52) where_part -> . WHERE bindings
    (48) after_part -> . AFTER formula

    IF              shift and go to state 78
    IFCONS          shift and go to state 74
    CAUSES          shift and go to state 77
    COMMA           shift and go to state 75
    DOT             reduce using rule 51 (where_part -> .)
    WHERE           shift and go to state 71
    AFTER           shift and go to state 73

    where_part                     shift and go to state 72
    after_part                     shift and go to state 76

state 23

    (79) term -> IDENTIFIER . LBRAC term_list RBRAC
    (81) identifier -> IDENTIFIER .
